5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4006/executions/1590_2895.log
== TEST (2019-03-20 15:15:05) 
-- CODE:
var1 = int(input("quantidade de jogos"))
var2 = float(input("valor unitario do jogo"))
var3 = float(input("valor do frete"))
-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:16:52) 
-- CODE:
var1 = int(input("quantidade de jogos"))
var2 = float(input("valor unitario do jogo"))
var3 = float(input("valor do frete"))
total = (var1 * var2 * var3 )
-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:17:17) 
-- CODE:
var1 = int(input("quantidade de jogos"))
var2 = float(input("valor unitario do jogo"))
var3 = float(input("valor do frete"))
total = (var1 * var2 * var3 )
-- EXECUTION TIME:
0.152052
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:

-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:

-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:17:35) 
-- CODE:
var1 = int(input("quantidade de jogos"))
var2 = float(input("valor unitario do jogo"))
var3 = float(input("valor do frete"))
total = (var1 * var2 * var3 )
print = (total)
-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:18:03) 
-- CODE:
var1 = int(input("quantidade de jogos"))
var2 = float(input("valor unitario do jogo"))
var3 = float(input("valor do frete"))
total = (var1 * var2 * var3 )
print = (total)
-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:19:01) 
-- CODE:
var1 = int(input("quantidade de jogos"))
var2 = float(input("valor unitario do jogo"))
var3 = float(input("valor do frete"))
total = (var1 * (var2 * var3 )
print = (total)
-- ERROR:
File "XXXX", line 5
    print = (total)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:19:39) 
-- CODE:
var1 = int(input("quantidade de jogos"))
var2 = float(input("valor unitario do jogo"))
var3 = float(input("valor do frete"))
total = (var1 * (var2 * var3 )
print = total
-- ERROR:
File "XXXX", line 5
    print = total
        ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(= total)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:21:29) 
-- CODE:
var1 = int(input("quantidade de jogos"))
var2 = float(input("valor unitario do jogo"))
var3 = float(input("valor do frete"))
total = (var1 * var2) + var3
print = (total) 
-- ERROR:
File "XXXX", line 5
    print = total
        ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(= total)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:21:49) 
-- CODE:
var1 = int(input("quantidade de jogos"))
var2 = float(input("valor unitario do jogo"))
var3 = float(input("valor do frete"))
total = (var1 * var2) + var3
print = (total) 
-- EXECUTION TIME:
0.183076
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:

-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:

-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:24:08) 
-- CODE:
var1 = int(input("quantidade de jogos"))
var2 = float(input("valor unitario do jogo"))
var3 = float(input("valor do frete"))
total = (var1 * var2) + var3
print(total) 
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:24:13) 
-- CODE:
var1 = int(input("quantidade de jogos"))
var2 = float(input("valor unitario do jogo"))
var3 = float(input("valor do frete"))
total = (var1 * var2) + var3
print(total) 
-- EXECUTION TIME:
0.272216
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 14:30:25) 
-- CODE:
var1 = int(input("quantidade de jogos"))
var2 = float(input("valor unitario do jogo"))
var3 = float(input("valor do frete"))
total = (var1 * var2) + var3
print(total) 
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
